--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           Get ready to Quiz and be amazed!
         </p>
       </div>
-      <button class="bg-green-600 font-light text-sm px-5 py-1 rounded text-white">
+      <button onclick="quertionPage()" class="bg-green-600 font-light text-sm px-5 py-1 rounded text-white">
         Blog
       </button>
     </nav>
